# mindsync

./: .env.example  .gitignore  docker-compose.yaml  package.json
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  main.yml
client/: next.config.js  package.json
client/src/components/: Card.tsx  EditorModal.tsx
client/src/pages/: index.tsx  test.tsx
client/src/styles/: globals.scss
server/: .gitignore  Cargo.toml  live-reload.bat
server/src/: database.rs  main.rs
server/src/controllers/: users.rs
server/src/controllers/websocket/: mod.rs
server/src/models/: user.rs
server/src/models/database/: user.rs
server/src/viewmodels/: users.rs
src/components/: AnimatedText.tsx  Header.tsx  HeaderItem.tsx  HeroHeading.tsx  layout.tsx
src/pages/: _app.tsx  test.tsx
src/styles/: global.scss
test/: playwright.test.ts
