[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
argon2 = "0.4.1"
axum = { version = "0.6.4", features = ["ws", "headers"] }
axum-macros = "0.3.4"
dotenv = "0.15.0"
futures = "0.3.26"
jsonwebtoken = "8.2.0"
mongodb = "2.3.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
tower-http = { version = "0.3.5", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
validator = { version = "0.16.0", features = ["derive"] }
